# stm32f429_bootloader

./: Makefile  bootloader.code-workspace  uploadApp.py
cfg/: CMakeLists.txt  STM32F429ZITx_FLASH.ld  openocd.cfg  stm32f429-disco.cfg  toolchain_stm32f4.cmake
inc/: memcfg.h  rcc_ctrl.h  terminal.h  timer_ctrl.h  uart_ctrl.h
src/: board.c  errorHandlers.c  gpio_ctrl.c  rcc_ctrl.c  retarget.c  terminal.c  timer_ctrl.c  uart_ctrl.c
src/core/: main.c  stm32f4xx_hal_conf.h
src/inc/: board.h  errorHandlers.h  gpio_ctrl.h  retarget.h  uart_ctrl.h
src/main/: main.c
